--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
     <script
       defer
@@ -30,9 +34,9 @@
       <h1 class="logo">LOREM IPSUM</h1>
       <div class="menu">
         <div class="menu-list">
-          <a class="active" href="#home">Home</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
+          <a href="#home">HOME</a>
+          <a href="#contact">CONTACT</a>
+          <a href="#about">ABOUT</a>
         </div>
         <div id="toggle" class="dark-mode-toggle">
           <i class="material-icons">dark_mode</i>
@@ -42,7 +46,7 @@
     <div class="first-section">
       <div class="first-content">
         <h6>DEMO PAGE TO TEST GLASS WIDGET</h6>
-        <h2>LOREM IPSUM</h2>
+        <h2>Lorem Ipsum</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -75,10 +79,12 @@
         </p>
         <button>LOREM IPSUM</button>
       </div>
-      <img src="https://placehold.co/500x350.png" />
+      <div class="image-holder">
+        <img class="placeholder" src="placeholder.svg" />
+      </div>
     </div>
     <div class="footer">
-      <p>Demo page to test Glass Widget.</p>
+      <h6>DEMO PAGE TO TEST GLASS WIDGET</h6>
     </div>
   </body>
 
